--- a/index.html
+++ b/index.html
@@ -16,33 +16,41 @@
     <!-- Include Bootstrap CSS     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+<!-- Add google place autocomplete to your form -->
+   
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJI1p10TuzIala94nhFWdfAZerjAW_Rwo&libraries=places&callback=initMap">
+    </script>
+
     <title>OpenWeather Dashboard</title>
 </head>
-
 <body class="bg-light">
-    <header class="bg-dark text-white text-center">
+    <header class="bg-primary text-white text-center">
         <h1>OpenWeather Dashboard</h1>
     </header>
     <main>
         <div class="container row col-12">
         <div class="col-md-4 col-sm-12">
             <div class="header-content-inner">
-                <h3>Search for a City</h3>
+                <h3>Search for a City:</h3>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Enter city name" aria-label="Enter city name"
-                        aria-describedby="button-addon2" id="city">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                        aria-describedby="button-addon2" id="city-input">
+                    <button class="btn btn-primary" type="button" id="city-search">Search</button>
                 </div>
             </div>
             <div class="container">
                 <div class="history">
                     <div class="list-group" id="history"></div>
                 </div>
+                <div class="container col-4">
+                <button class="btn btn-warning" type="button" id="clear-history">Clear History</button>
+                </div>
             </div>
         </div>
         <!-- Add weather forecast -->
         <div class="col-md-8 col-sm-12">
-            <div class="card">
+            <div class="card card-bordered border-primary">
                 <div class="card-body">
                     <h5 class="card-title">
                         <span id="city-name"></span>
@@ -55,9 +63,9 @@
                     <p class="card-text" id="uv-index"></p>
                 </div>
             </div>
-            <div class="">
+            <div class="table-responsive border border-secondary col-10 col-sm-3">
                 <h3>5-Day Forecast</h3>
-                <table class="table table-striped table-bordered table-responsive">
+                <table class="table table-striped table-bordered ">
                     <thead>
                         <tr id="table-header">
                         </tr>
