--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
                 </div>
                 <div class="container">
                     <div class="history">
-                        <div class="list-group" id="history" style="padding-bottom:0.5rem"></div>
-                        <button class="btn btn-link btn-block" id="clear-history">Clear History
-                            <i class="fas fa-trash"></i>
-                        </button>
+                        <div class="list-group" id="history" style="padding:0.5rem"></div>
+                        <!-- Add toggle switch for degrees celcius and fahrenheit -->
+                        <div class="row text-center align-items-center">
+                            <div class="btn-group btn-group-toggle text-center align-items-center" data-toggle="buttons">
+                                <label class="btn btn-link active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked>°F
+                                </label>
+                                <label class="btn btn-link">
+                                    <input type="radio" name="options" id="option2" autocomplete="off">°C
+                                </label>
+                                <button class="btn btn-link btn-block" id="clear-history">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
