--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" /> -->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -48,10 +48,10 @@
                         <div class="row text-center align-items-center">
                             <div class="btn-group btn-group-toggle text-center align-items-center" data-toggle="buttons">
                                 <label class="btn btn-link active">
-                                    <input type="radio" name="options" id="option1" autocomplete="off" checked>°F
+                                    <button class="btn btn-link active" type="radio" name="options" id="farenheit" autocomplete="off" checked>°F</button>
                                 </label>
                                 <label class="btn btn-link">
-                                    <input type="radio" name="options" id="option2" autocomplete="off">°C
+                                    <button class="btn btn-link active" type="radio" name="options" id="celcius" autocomplete="off">°C</button>
                                 </label>
                                 <button class="btn btn-link btn-block" id="clear-history">
                                     <i class="fas fa-trash"></i>
@@ -80,7 +80,7 @@
                         </div>
                         <div>
                             <h4 class="text-center">Hourly</h4>
-                            <table class="table table-sm col-lg-6">
+                            <table class="table table-sm table-resposive table-sm col-lg-6">
                                 <thead>
                                     <tr id="table-header">
                                     </tr>
