--- a/index.html
+++ b/index.html
@@ -51,23 +51,22 @@
             <div class="col-lg-10 col-sm-12 bg-white">
                 <div class="card-deck">
                     <div class="card">
-                        <h2 class="card-title text-center">
+                        <h2 class="card-title text-center p-2 font-weight-bold">
                             <span id="city-name"></span>
                             <span id="date"></span>
                             <img src="" alt="" id="icon">
                         </h2>
-                        <ul class="card-body list-unstyled text-center">
-                            <li id="temp"></li>
-                            <li id="humidity"></li>
-                            <li id="wind-speed"></li>
-                        </ul>
+                        <div class="text-center">
+                            <p id="temp"></p>
+                            <p id="humidity"></p>
+                            <p id="wind-speed"></p>
+                        </div>
                     </div>
                     <div class="card text-center">
-                        <div class="card-title">
-                            <h2>Hourly</h2>
-                        </div>
+                        <h2 class="card-title p-2 font-weight-bold">
+                            <span>Hourly</span>
+                        </h2>
                         <div class="card-body">
-                            <!-- <div class="card-deck" id="hourly-cards"></div> -->
                             <table class="table table-sm">
                                 <thead>
                                     <tr id="table-header">
